src/tests/resources/transcripts/errors/unknown_expression.sif
print _
(-- error
unknown expression “_”
--)
